# api-client-python

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  ApiExplorer.md  CHANGELOG.md  README.md  __init__.py  api-test.ipynb  api_client.py  api_client_v2.py  api_explorer.py  client.py  demo.py  generate.py  generate.sh  klines_client.py  mise.toml  models.py  mypy.ini  pyproject.toml  requirements.txt  test.ipynb  trpc.py  unittest_hive.py  update_pypirc.sh
.cursor/rules/: conventional-commits.mdc
.github/: dependabot.yml
.github/workflows/: codecov.yml  release.yml  test.yml
crypticorn/: __init__.py  api.py  client.py  functions.py
crypticorn/_internal/: intel_client.py
crypticorn/auth/: README.md  __init__.py  main.py
crypticorn/auth/.openapi-generator/: FILES
crypticorn/auth/client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
crypticorn/auth/docs/: AddWallet200Response.md  AddWalletRequest.md  AdminApi.md  AuthApi.md  AuthorizeUser200Response.md  AuthorizeUser200ResponseAuth.md  AuthorizeUserRequest.md  CreateApiKey200Response.md  CreateApiKeyRequest.md  CreateUserRequest.md  GetApiKeys200ResponseInner.md  ListWallets200Response.md  ListWallets200ResponseBalancesInner.md  ListWallets200ResponseBalancesInnerSaleRound.md  ListWallets200ResponseBalancesInnerWallet.md  ListWallets200ResponseBalancesInnerWalletVestingWalletsInner.md  ListWallets200ResponseDataInner.md  ListWallets200ResponseUserValue.md  LogoutDefaultResponse.md  LogoutDefaultResponseIssuesInner.md  OauthCallback200Response.md  OauthCallback200ResponseUser.md  RefreshTokenInfo200Response.md  RefreshTokenInfo200ResponseUserSession.md  ResendVerificationEmailRequest.md  RevokeUserTokensRequest.md  RotateTokens200Response.md  ServiceApi.md  TokenInfo200Response.md  UnlinkWalletRequest.md  UpdateUserRequest.md  UserApi.md  UserByUsername200Response.md  UserResetPasswordRequest.md  UserSetPasswordRequest.md  Verify200Response.md  VerifyEmail200Response.md  VerifyEmail200ResponseAuth.md  VerifyEmail200ResponseAuthAuth.md  VerifyEmailRequest.md  (+4 more)
crypticorn/cli/: init.py
crypticorn/cli/templates/: Dockerfile
crypticorn/common/: README.md  __init__.py  ansi_colors.py  auth.py  auth_client.py  enums.py  errors.py  exceptions.py  logging.py  middleware.py  mixins.py  pagination.py  scopes.py  urls.py  utils.py  warnings.py
crypticorn/common/models/: auth.py  scopes.py  urls.py
crypticorn/common/router/: admin_router.py  status_router.py
crypticorn/common/snippets/: auth_client.py
crypticorn/defi/: __init__.py  main.py
crypticorn/derivatives/: __init__.py  main.py
crypticorn/dex/: main.py
crypticorn/dex/.openapi-generator/: FILES
crypticorn/dex/client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
crypticorn/hive/: .openapi-generator-ignore  README.md  __init__.py  main.py  utils.py
crypticorn/hive/.openapi-generator/: FILES
crypticorn/hive/client/: __init__.py  api_client.py  configuration.py  rest.py
crypticorn/hive/docs/: AdminApi.md  ApiErrorIdentifier.md  ApiErrorLevel.md  Coins.md  DataApi.md  DataDownloadResponse.md  DataInfo.md  DataOptions.md  DataValueValueValueInner.md  DataVersion.md  DataVersionInfo.md  DownloadLinks.md  Evaluation.md  EvaluationResponse.md  ExceptionDetail.md  FeatureSize.md  LogLevel.md  Model.md  ModelCreate.md  ModelStatus.md  ModelUpdate.md  ModelsApi.md  StatusApi.md  Target.md  TargetInfo.md  TargetType.md  ValidationErrorLocInner.md
crypticorn/klines/: .openapi-generator-ignore  README.md  main.py
crypticorn/klines/.openapi-generator/: FILES
crypticorn/klines/client/: configuration.py  rest.py
crypticorn/klines/docs/: BaseResponseListStr.md  (+38 more)
crypticorn/metrics/: README.md  main.py  wrapper.py
crypticorn/news/: __init__.py  main.py
crypticorn/notification/: main.py
crypticorn/pay/: README.md  main.py
crypticorn/sentiment/: __init__.py  main.py
crypticorn/social/: __init__.py  main.py
crypticorn/trade/: README.md  main.py
public/: CHANGELOG.md  LICENSE  LICENSE.md  README.md  pyproject.toml
public/crypticorn/: __init__.py  api.py  utils.py
public/docs/: crypticorn.html  index.html
requirements/: dev.txt  main.txt
scripts/: demo.py  gen_trade_client.sh  generate.py  merge-env.sh
scripts/config/: trade_client.json
scripts/templates/: api.mustache  partial_api_args_call.mustache
templates/: api.mustache
tests/: __init__.py  conftest.py  envs.py  test_api_client.py  test_async_client.py  test_async_custom_session.py  test_auth_client.py  test_basic_client.py  test_config.py  test_crypticorn_client.py  test_demo_lazy_init.py  test_errors.py  test_hive_client.py  test_intel_services.py  test_pagination.py  test_shared_aiohttp_client.py  test_sync_client.py  test_sync_custom_session.py  unittest_client.py
tests/measure-performance/: import-speed.py  memory_comparison.py  quick_test.py  startup-time.py
(+366 files in other folders)
