[project]
name = "crypticorn-internal"
description = "Maximise Your Crypto Trading Profits with AI Predictions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name = "Crypticorn", email = "timon@crypticorn.com"}]
version = "0.4.7"
keywords = ["machine learning", "data science", "crypto", "modelling"]

dependencies = [
    "pandas >= 2.2.0, < 3.0.0",
    "requests >= 2.32.0, < 3.0.0",
]

classifiers = [
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls]
Website = "https://crypticorn.com"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}