[project]
name = "crypticorn"
description = "Maximise Your Crypto Trading Profits with AI Predictions"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Crypticorn", email = "timon@crypticorn.com"}]
version = "1.1.0"
keywords = ["machine learning", "data science", "crypto", "modelling"]
dynamic = ["dependencies", "optional-dependencies"]

classifiers = [
    "Topic :: Scientific/Engineering",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/main.txt"] }
optional-dependencies.dev = { file = ["requirements/dev.txt"] }
optional-dependencies.test = { file = ["requirements/test.txt"] }

[project.urls]
Homepage = "https://crypticorn.com"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
