[project]
name = "crypticorn"
description = "Maximise Your Crypto Trading Profits with AI Predictions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name = "Crypticorn", email = "timon@crypticorn.com"}]
version = "0.4.0"
keywords = ["machine learning", "data science", "crypto", "modelling"]

dependencies = [
    "pandas >= 2.2.2",
    "requests >= 2.32.3",
]

classifiers = [
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls]
Website = "https://crypticorn.com"
Documentation = "https://api.crypticorn.dev"
Dashboard = "https://app.crypticorn.dev/developer"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
